postgress-redmine/redmine-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
spec:
  strategy: 
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: redmine-app
  template:
    metadata:
      labels:
        app: redmine-app
    spec:
      containers:
      - name: redmine-411
        image: redmine:4.1.1
        ports:
        - name: redmine-port
          containerPort: 3000
